--- a/src/assets/scss/header/_headertop.scss
+++ b/src/assets/scss/header/_headertop.scss
@@ -1,6 +1,7 @@
 /*--------------------------
     Header Top Styles  
 -----------------------------*/
+@import './../default/variables';
 .header-top-news {
     position: relative;
     top: 0;
