--- a/src/assets/scss/header/_mobilemenu.scss
+++ b/src/assets/scss/header/_mobilemenu.scss
@@ -1,6 +1,7 @@
 /*------------------------------
     Popup Menu Styles  
 --------------------------------*/
+@import './../default/variables';
 .popup-mobile-menu {
     z-index: 9999;
     position: fixed;
