--- a/src/assets/scss/header/_nav.scss
+++ b/src/assets/scss/header/_nav.scss
@@ -1,6 +1,7 @@
 /*--------------------------
     Navigation Styles 
 ----------------------------*/
+@import './../default/variables';
 .mainmenu-nav {
     .mainmenu {
         display: flex;
